--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <li><a href="https://github.com/Headmast/SmartyCoder/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/Headmast/SmartyCoder/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/Headmast/SmartyCoder">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://newlinkios.herokuapp.com/">https://newlinkios.herokuapp.com/</a></li>
         </ul>
       </header>
       <section>
