--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <ul>
           <li><a href="https://github.com/Headmast/SmartyCoder/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/Headmast/SmartyCoder/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/Headmast/SmartyCoder">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://ssslink.herokuapp.com">View On <strong>GitHub</strong></a></li>
           <li><a href="https://newlinkios.herokuapp.com/">View On <strong>https://newlinkios.herokuapp.com/</strong></a></li>
         </ul>
       </header>
